feat: Revamp Experience and Skills sections with new card layout, detailed content, and improved styling

--- a/index.html
+++ b/index.html
@@ -220,22 +220,96 @@
             <div class="section-title">
                 <h2>Experience</h2>
             </div>
-            <div class="experience-item fade-in">
-                <div class="experience-header">
-                    <div>
-                        <h3 class="experience-title">Full Stack Developer</h3>
-                        <div class="experience-company">Freelancer</div>
-                    </div>
-                    <div class="experience-period">Present</div>
+            
+            <!-- Professional Experience -->
+            <div class="experience-card fade-in">
+                <div class="experience-badge">
+                    <i class="fas fa-briefcase"></i>
+                    <span>Professional</span>
                 </div>
-                <p class="experience-description">Building scalable web applications and AI-powered solutions for clients worldwide. Specializing in modern JavaScript frameworks and integrating cutting-edge AI technologies.</p>
-                <ul class="experience-highlights">
-                    <li>Developed full-stack web applications using MERN stack</li>
-                    <li>Integrated AI functionalities using Gemini AI and Speech-to-Text APIs</li>
-                    <li>Built responsive and performant frontends with Next.js and React</li>
-                    <li>Designed and implemented RESTful APIs with Node.js and Express</li>
-                    <li>Managed PostgreSQL and MongoDB databases with modern ORMs</li>
-                </ul>
+                <div class="experience-content">
+                    <div class="experience-header">
+                        <div class="experience-info">
+                            <h3 class="experience-title">Full Stack Developer</h3>
+                            <div class="experience-company">
+                                <i class="fas fa-building"></i>
+                                <span>Freelancer</span>
+                            </div>
+                        </div>
+                        <div class="experience-period">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>2023 – Present</span>
+                        </div>
+                    </div>
+                    <div class="experience-details">
+                        <h4>Key Responsibilities:</h4>
+                        <ul class="experience-list">
+                            <li><i class="fas fa-check-circle"></i>Design and develop scalable full-stack web applications using MERN stack</li>
+                            <li><i class="fas fa-check-circle"></i>Build responsive and performant user interfaces with Next.js, React, and Tailwind CSS</li>
+                            <li><i class="fas fa-check-circle"></i>Architect and implement RESTful APIs with Node.js and Express.js</li>
+                            <li><i class="fas fa-check-circle"></i>Integrate AI capabilities using Gemini AI and Speech-to-Text APIs</li>
+                            <li><i class="fas fa-check-circle"></i>Manage and optimize PostgreSQL and MongoDB databases with Drizzle ORM</li>
+                        </ul>
+                        <div class="experience-tech">
+                            <h4>Technologies Used:</h4>
+                            <div class="tech-tags">
+                                <span class="tech-tag">React</span>
+                                <span class="tech-tag">Next.js</span>
+                                <span class="tech-tag">Node.js</span>
+                                <span class="tech-tag">Express.js</span>
+                                <span class="tech-tag">TypeScript</span>
+                                <span class="tech-tag">PostgreSQL</span>
+                                <span class="tech-tag">MongoDB</span>
+                                <span class="tech-tag">Gemini AI</span>
+                                <span class="tech-tag">Tailwind CSS</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project Experience -->
+            <div class="experience-card fade-in delay-1">
+                <div class="experience-badge project">
+                    <i class="fas fa-code"></i>
+                    <span>Project</span>
+                </div>
+                <div class="experience-content">
+                    <div class="experience-header">
+                        <div class="experience-info">
+                            <h3 class="experience-title">Academic & Personal Projects</h3>
+                            <div class="experience-company">
+                                <i class="fas fa-project-diagram"></i>
+                                <span>University & Self-Initiated</span>
+                            </div>
+                        </div>
+                        <div class="experience-period">
+                            <i class="fas fa-calendar-alt"></i>
+                            <span>2023 – Present</span>
+                        </div>
+                    </div>
+                    <div class="experience-details">
+                        <h4>Key Projects:</h4>
+                        <ul class="experience-list">
+                            <li><i class="fas fa-check-circle"></i>Developed InterviewGenie: AI-powered mock interview platform with real-time feedback</li>
+                            <li><i class="fas fa-check-circle"></i>Built Premier Scales Site: Complete management system for scale repairs and calibrations</li>
+                            <li><i class="fas fa-check-circle"></i>Created ATM Guard AI: Real-time surveillance system with computer vision and threat detection</li>
+                            <li><i class="fas fa-check-circle"></i>Implemented end-to-end authentication, role-based access control, and cloud deployment</li>
+                        </ul>
+                        <div class="experience-tech">
+                            <h4>Technologies Used:</h4>
+                            <div class="tech-tags">
+                                <span class="tech-tag">Python</span>
+                                <span class="tech-tag">TensorFlow</span>
+                                <span class="tech-tag">OpenCV</span>
+                                <span class="tech-tag">React.js</span>
+                                <span class="tech-tag">Firebase</span>
+                                <span class="tech-tag">Google Cloud</span>
+                                <span class="tech-tag">Drizzle ORM</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -246,55 +320,169 @@
             <div class="section-title">
                 <h2>Technical Skills</h2>
             </div>
-            <div class="skills-grid">
-                <div class="skill-card fade-in">
-                    <div class="skill-icon">
-                        <i class="fab fa-js-square"></i>
-                    </div>
-                    <h3>MERN Stack</h3>
-                    <p>Full-stack development with MongoDB, Express.js, React, Node.js</p>
-                </div>
-                <div class="skill-card fade-in delay-1">
-                    <div class="skill-icon">
-                        <i class="fab fa-react"></i>
+            
+            <!-- Frontend Skills -->
+            <div class="skills-category">
+                <div class="category-header fade-in">
+                    <div class="category-icon">
+                        <i class="fas fa-laptop-code"></i>
                     </div>
                     <h3>Frontend Development</h3>
-                    <p>React, Next.js, Tailwind CSS, shadcn/ui</p>
                 </div>
-                <div class="skill-card fade-in delay-2">
-                    <div class="skill-icon">
-                        <i class="fas fa-code"></i>
+                <div class="skills-grid">
+                    <div class="skill-card fade-in">
+                        <div class="skill-badge">Frontend</div>
+                        <div class="skill-icon">
+                            <i class="fab fa-react"></i>
+                        </div>
+                        <h4>React & Next.js</h4>
+                        <p>Building modern, performant SPAs and SSR applications</p>
+                        <div class="skill-tags">
+                            <span>React</span>
+                            <span>Next.js</span>
+                            <span>Hooks</span>
+                        </div>
                     </div>
-                    <h3>TypeScript</h3>
-                    <p>Type-safe development, Interfaces, Generics, Advanced Types</p>
+                    <div class="skill-card fade-in delay-1">
+                        <div class="skill-badge">Frontend</div>
+                        <div class="skill-icon">
+                            <i class="fab fa-css3-alt"></i>
+                        </div>
+                        <h4>Styling & UI</h4>
+                        <p>Modern CSS frameworks and component libraries</p>
+                        <div class="skill-tags">
+                            <span>Tailwind CSS</span>
+                            <span>shadcn/ui</span>
+                            <span>CSS3</span>
+                        </div>
+                    </div>
+                    <div class="skill-card fade-in delay-2">
+                        <div class="skill-badge">Frontend</div>
+                        <div class="skill-icon">
+                            <i class="fab fa-js-square"></i>
+                        </div>
+                        <h4>JavaScript & TypeScript</h4>
+                        <p>Type-safe development with modern ES6+ features</p>
+                        <div class="skill-tags">
+                            <span>TypeScript</span>
+                            <span>ES6+</span>
+                            <span>Async/Await</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="skill-card fade-in delay-3">
-                    <div class="skill-icon">
+            </div>
+
+            <!-- Backend Skills -->
+            <div class="skills-category">
+                <div class="category-header fade-in">
+                    <div class="category-icon">
                         <i class="fas fa-server"></i>
                     </div>
                     <h3>Backend Development</h3>
-                    <p>Node.js, Express.js, REST APIs, Authentication</p>
                 </div>
-                <div class="skill-card fade-in">
-                    <div class="skill-icon">
+                <div class="skills-grid">
+                    <div class="skill-card fade-in">
+                        <div class="skill-badge backend">Backend</div>
+                        <div class="skill-icon">
+                            <i class="fab fa-node-js"></i>
+                        </div>
+                        <h4>Node.js & Express</h4>
+                        <p>Building scalable RESTful APIs and server applications</p>
+                        <div class="skill-tags">
+                            <span>Node.js</span>
+                            <span>Express.js</span>
+                            <span>REST APIs</span>
+                        </div>
+                    </div>
+                    <div class="skill-card fade-in delay-1">
+                        <div class="skill-badge backend">Backend</div>
+                        <div class="skill-icon">
+                            <i class="fas fa-shield-alt"></i>
+                        </div>
+                        <h4>Authentication & Security</h4>
+                        <p>JWT, OAuth, RBAC, and secure coding practices</p>
+                        <div class="skill-tags">
+                            <span>JWT</span>
+                            <span>OAuth</span>
+                            <span>RBAC</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Database Skills -->
+            <div class="skills-category">
+                <div class="category-header fade-in">
+                    <div class="category-icon">
                         <i class="fas fa-database"></i>
                     </div>
                     <h3>Databases & ORMs</h3>
-                    <p>PostgreSQL, MongoDB, Drizzle ORM</p>
                 </div>
-                <div class="skill-card fade-in">
-                    <div class="skill-icon">
-                        <i class="fas fa-robot"></i>
+                <div class="skills-grid">
+                    <div class="skill-card fade-in">
+                        <div class="skill-badge database">Database</div>
+                        <div class="skill-icon">
+                            <i class="fas fa-database"></i>
+                        </div>
+                        <h4>SQL Databases</h4>
+                        <p>PostgreSQL with Drizzle ORM for type-safe queries</p>
+                        <div class="skill-tags">
+                            <span>PostgreSQL</span>
+                            <span>Drizzle ORM</span>
+                            <span>SQL</span>
+                        </div>
                     </div>
-                    <h3>AI Integration</h3>
-                    <p>Gemini AI, Speech-to-Text APIs, Machine Learning</p>
+                    <div class="skill-card fade-in delay-1">
+                        <div class="skill-badge database">Database</div>
+                        <div class="skill-icon">
+                            <i class="fas fa-leaf"></i>
+                        </div>
+                        <h4>NoSQL Databases</h4>
+                        <p>MongoDB for flexible, document-based data storage</p>
+                        <div class="skill-tags">
+                            <span>MongoDB</span>
+                            <span>Mongoose</span>
+                            <span>NoSQL</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="skill-card fade-in delay-1">
-                    <div class="skill-icon">
-                        <i class="fab fa-python"></i>
+            </div>
+
+            <!-- AI & ML Skills -->
+            <div class="skills-category">
+                <div class="category-header fade-in">
+                    <div class="category-icon">
+                        <i class="fas fa-brain"></i>
                     </div>
-                    <h3>Python & Deep Learning</h3>
-                    <p>TensorFlow, OpenCV, Computer Vision, Neural Networks</p>
+                    <h3>AI & Machine Learning</h3>
+                </div>
+                <div class="skills-grid">
+                    <div class="skill-card fade-in">
+                        <div class="skill-badge ai">AI/ML</div>
+                        <div class="skill-icon">
+                            <i class="fas fa-robot"></i>
+                        </div>
+                        <h4>AI Integration</h4>
+                        <p>Gemini AI, Speech-to-Text APIs for intelligent apps</p>
+                        <div class="skill-tags">
+                            <span>Gemini AI</span>
+                            <span>Speech-to-Text</span>
+                            <span>NLP</span>
+                        </div>
+                    </div>
+                    <div class="skill-card fade-in delay-1">
+                        <div class="skill-badge ai">AI/ML</div>
+                        <div class="skill-icon">
+                            <i class="fab fa-python"></i>
+                        </div>
+                        <h4>Deep Learning</h4>
+                        <p>TensorFlow, OpenCV for computer vision applications</p>
+                        <div class="skill-tags">
+                            <span>TensorFlow</span>
+                            <span>OpenCV</span>
+                            <span>Python</span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
