--- a/index.html
+++ b/index.html
@@ -497,55 +497,67 @@
                             <i class="fas fa-users"></i>
                         </div>
                         <h3>Team Collaboration</h3>
-                        <p>Experienced in working with cross-functional teams, actively contributing to discussions and fostering a collaborative environment</p>
-                        <div class="comm-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
+                        <p class="comm-description">Actively work with cross-functional teams on multiple projects, fostering a collaborative environment through regular stand-ups and code reviews.</p>
+                        <div class="comm-examples">
+                            <div class="comm-example-item">
+                                <i class="fas fa-check"></i>
+                                <span>Led team discussions in academic projects</span>
+                            </div>
+                            <div class="comm-example-item">
+                                <i class="fas fa-check"></i>
+                                <span>Coordinate with IEEE & CS Society teams</span>
+                            </div>
                         </div>
                     </div>
                     <div class="communication-card fade-in delay-1">
                         <div class="comm-icon-wrapper">
-                            <i class="fas fa-lightbulb"></i>
+                            <i class="fas fa-microphone"></i>
                         </div>
-                        <h3>Problem Solving</h3>
-                        <p>Strong analytical mindset with ability to break down complex problems and communicate solutions effectively to stakeholders</p>
-                        <div class="comm-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
+                        <h3>Presentation Skills</h3>
+                        <p class="comm-description">Experienced announcer for cultural events and presenter at technical meetups, capable of explaining complex concepts clearly to diverse audiences.</p>
+                        <div class="comm-examples">
+                            <div class="comm-example-item">
+                                <i class="fas fa-check"></i>
+                                <span>Announced multiple university events</span>
+                            </div>
+                            <div class="comm-example-item">
+                                <i class="fas fa-check"></i>
+                                <span>Present technical demos and features</span>
+                            </div>
                         </div>
                     </div>
                     <div class="communication-card fade-in delay-2">
                         <div class="comm-icon-wrapper">
-                            <i class="fas fa-comments"></i>
+                            <i class="fas fa-file-code"></i>
                         </div>
-                        <h3>Client Communication</h3>
-                        <p>Skilled in understanding client requirements, providing regular updates, and maintaining clear communication throughout projects</p>
-                        <div class="comm-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star-half-alt"></i>
+                        <h3>Technical Documentation</h3>
+                        <p class="comm-description">Maintain comprehensive project documentation, write clear API specs, and create detailed README files for all repositories.</p>
+                        <div class="comm-examples">
+                            <div class="comm-example-item">
+                                <i class="fas fa-check"></i>
+                                <span>Document APIs and code architecture</span>
+                            </div>
+                            <div class="comm-example-item">
+                                <i class="fas fa-check"></i>
+                                <span>Write detailed project README files</span>
+                            </div>
                         </div>
                     </div>
                     <div class="communication-card fade-in delay-3">
                         <div class="comm-icon-wrapper">
-                            <i class="fas fa-file-alt"></i>
+                            <i class="fas fa-comments"></i>
                         </div>
-                        <h3>Technical Documentation</h3>
-                        <p>Proficient in creating comprehensive documentation, writing clear code comments, and maintaining organized project wikis</p>
-                        <div class="comm-rating">
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="fas fa-star"></i>
-                            <i class="far fa-star"></i>
+                        <h3>Client Communication</h3>
+                        <p class="comm-description">Skilled at gathering requirements, providing project updates, and managing expectations through clear and consistent communication.</p>
+                        <div class="comm-examples">
+                            <div class="comm-example-item">
+                                <i class="fas fa-check"></i>
+                                <span>Regular client updates and feedback</span>
+                            </div>
+                            <div class="comm-example-item">
+                                <i class="fas fa-check"></i>
+                                <span>Translate technical jargon for clients</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -563,60 +575,103 @@
                 <div class="project-card fade-in">
                     <div class="project-img">
                         <img src="𝐈𝐧𝐭𝐞𝐫𝐯𝐢𝐞𝐰𝐆𝐞𝐧𝐢𝐞.png" alt="InterviewGenie Project">
+                        <div class="project-badge">
+                            <i class="fas fa-robot"></i>
+                            <span>AI-Powered</span>
+                        </div>
                     </div>
                     <div class="project-content">
-                        <h3>𝐈𝐧𝐭𝐞𝐫𝐯𝐢𝐞𝐰𝐆𝐞𝐧𝐢𝐞</h3>
-                        <p>InterviewGenie, a smart AI-powered mock interview platform that helps users practice interviews and get instant, meaningful feedback.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">Next.js</span>
-                            <span class="project-tag">React</span>
-                            <span class="project-tag">Node.js</span>
-                            <span class="project-tag">PostgreSQL</span>
-                            <span class="project-tag">Drizzle ORM</span>
-                            <span class="project-tag">Tailwind CSS</span>
-                            <span class="project-tag">Gemini AI</span>
+                        <h3>InterviewGenie</h3>
+                        <p>AI-powered mock interview platform with real-time feedback and intelligent question generation.</p>
+                        <div class="project-tech-stack">
+                            <h4>Tech Stack:</h4>
+                            <div class="project-tags">
+                                <span class="project-tag">Next.js</span>
+                                <span class="project-tag">React</span>
+                                <span class="project-tag">PostgreSQL</span>
+                                <span class="project-tag">Drizzle ORM</span>
+                                <span class="project-tag">Gemini AI</span>
+                                <span class="project-tag">Tailwind CSS</span>
+                            </div>
                         </div>
-                        <a href="https://github.com/InterviewGenie-SUSL/interview-mocker-application" target="_blank" class="btn">View Project</a>
+                        <div class="project-buttons">
+                            <a href="#" class="btn btn-primary" target="_blank">
+                                <i class="fas fa-external-link-alt"></i>
+                                <span>Live Demo</span>
+                            </a>
+                            <a href="https://github.com/InterviewGenie-SUSL/interview-mocker-application" target="_blank" class="btn btn-secondary">
+                                <i class="fab fa-github"></i>
+                                <span>Source Code</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card fade-in delay-1">
                     <div class="project-img">
                         <img src="Primier_scales_site.png" alt="Premier Scales Site Project">
+                        <div class="project-badge business">
+                            <i class="fas fa-building"></i>
+                            <span>Client Project</span>
+                        </div>
                     </div>
                     <div class="project-content">
-                        <h3>Primier scales site (for Client)</h3>
-                        <p>End-to-end platform to manage scale repairs, calibrations, parts, billing, and certificates with role-based access.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">React</span>
-                            <span class="project-tag">Node.js</span>
-                            <span class="project-tag">PostgreSQL</span>
-                            <span class="project-tag">Express.js</span>
-                            <span class="project-tag">Tailwind CSS</span>
-                            <span class="project-tag">Google Cloud </span>
-                            <span class="project-tag">JWT/RBAC</span>
+                        <h3>Premier Scales Management</h3>
+                        <p>Complete platform for scale repairs, calibrations, parts management, and billing with RBAC.</p>
+                        <div class="project-tech-stack">
+                            <h4>Tech Stack:</h4>
+                            <div class="project-tags">
+                                <span class="project-tag">React</span>
+                                <span class="project-tag">Node.js</span>
+                                <span class="project-tag">PostgreSQL</span>
+                                <span class="project-tag">Express.js</span>
+                                <span class="project-tag">Google Cloud</span>
+                                <span class="project-tag">JWT/RBAC</span>
+                            </div>
                         </div>
-                        <a href="https://github.com/DutheeshChelaka/primier-scales-site" target="_blank" class="btn">View Project</a>
+                        <div class="project-buttons">
+                            <a href="#" class="btn btn-primary" target="_blank">
+                                <i class="fas fa-external-link-alt"></i>
+                                <span>Live Demo</span>
+                            </a>
+                            <a href="https://github.com/DutheeshChelaka/primier-scales-site" target="_blank" class="btn btn-secondary">
+                                <i class="fab fa-github"></i>
+                                <span>Source Code</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card fade-in delay-2">
                     <div class="project-img">
                         <img src="ATM Guard AI.png" alt="ATM Guard AI Project">
+                        <div class="project-badge ml">
+                            <i class="fas fa-brain"></i>
+                            <span>Computer Vision</span>
+                        </div>
                     </div>
                     <div class="project-content">
                         <h3>ATM Guard AI</h3>
-                        <p>AI-Powered Real-Time Surveillance System for ATM Safety and Threat Detection.</p>
-                        <div class="project-tags">
-                            <span class="project-tag">OpenCV</span>
-                            <span class="project-tag">TensorFlow</span>
-                            <span class="project-tag">Python</span>
-                            <span class="project-tag">Node.js</span>
-                            <span class="project-tag">Express.js</span>
-                            <span class="project-tag">React.js</span>
-                            <span class="project-tag">MongoDB</span>
-                            <span class="project-tag">Tailwind CSS</span>
-                            <span class="project-tag">Firebase</span>
+                        <p>Real-time surveillance system using computer vision and deep learning for ATM security.</p>
+                        <div class="project-tech-stack">
+                            <h4>Tech Stack:</h4>
+                            <div class="project-tags">
+                                <span class="project-tag">Python</span>
+                                <span class="project-tag">TensorFlow</span>
+                                <span class="project-tag">OpenCV</span>
+                                <span class="project-tag">React.js</span>
+                                <span class="project-tag">MongoDB</span>
+                                <span class="project-tag">Firebase</span>
+                            </div>
                         </div>
-                        <a href="https://github.com/SE5104-Mini-Project/ATM-GuardAI" target="_blank" class="btn">View Project</a>
+                        <div class="project-buttons">
+                            <a href="#" class="btn btn-primary" target="_blank">
+                                <i class="fas fa-external-link-alt"></i>
+                                <span>Live Demo</span>
+                            </a>
+                            <a href="https://github.com/SE5104-Mini-Project/ATM-GuardAI" target="_blank" class="btn btn-secondary">
+                                <i class="fab fa-github"></i>
+                                <span>Source Code</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
